# self-service-agent-blueprint

./: .dockerignore  .flake8  .gitignore  .helmignore  API_REFERENCE.md  APPENG-4759  ARCHITECTURE_DIAGRAMS.md  AUTHENTICATION_GUIDE.md  CERT_MANAGER_IMPLEMENTATION.md  CLAUDE.md  CONTAINER_CONSOLIDATION.md  CONTRIBUTING.md  Containerfile  Containerfile.mcp-template  Containerfile.services-template  Containerfile.template  DEPLOYMENT_MIGRATION_GUIDE.md  DEPLOYMENT_SERVICE_MESH.md  GETTING_STARTED_PORT_FORWARD.md  GUIDELINES.md  INTEGRATION_DISPATCHER_LOGGING_IMPROVEMENTS.md  INTEGRATION_GUIDE.md  INTEGRATION_TESTING_GUIDE.md  IT self-service agent AI quickstart video outline.md  IT-self-service-agent-demo-script.md  KNATIVE_CONFIGURATION.md  KNATIVE_SERVICE_MESH_FIX.md  KNATIVE_TLS_STATUS.md  Makefile  PORT_FORWARD_QUICK_START.md  PORT_FORWARD_TESTING.md  PR_DESCRIPTION.md  README.md  REQUEST_MANAGEMENT.md  SLACK_INTEGRATION_SETUP.md  SLACK_SETUP.md  SYNCHRONOUS_API_FIXES.md  TOOL_INTEGRATION_GUIDE.md  USER_NOTIFICATION_IMPROVEMENTS.md  migration-to-deployments.md  (+8 more)
agent-manager/: Containerfile  README.md  pyproject.toml
agent-manager/config/agents/: agent-1.yaml  config.yaml  laptop-refresh-agent.yaml  routing-agent.yaml
agent-manager/config/knowledge_bases/: laptop-knowledge-base.yaml  laptop_offerings.txt  refresh_policy.txt
agent-manager/local_testing/: run_llamastack.sh  run_ollama.sh
agent-manager/local_testing/script/: play.py
agent-manager/script/: play.py  register_agents.py
agent-manager/src/agent_manager/: __init__.py  agent_manager.py  config.yaml  kb_manager.py  util.py
agent-manager/tests/: test_agent_manager.py
agent-service/: Containerfile  pyproject.toml  requirements.txt
agent-service/config/: config.yaml
agent-service/config/agents/: laptop-refresh-agent.yaml  routing-agent.yaml  ticket-general-agent.yaml  ticket-laptop-refresh-agent.yaml  ticket-review-agent.yaml
agent-service/config/lg-prompts/: lg-prompt-big-safer.yaml  lg-prompt-big.yaml  lg-prompt-gemini.yaml  lg-prompt-small-scout.yaml  lg-prompt-small.yaml  routing.yaml  ticket-general-lg-prompt-small.yaml  ticket-laptop-refresh-lg-prompt-big.yaml  ticket-laptop-refresh-lg-prompt-small-scout.yaml  ticket-laptop-refresh-lg-prompt-small.yaml  ticket-routing.yaml
agent-service/src/agent_service/: __init__.py  main.py  routing.py  schemas.py  session_manager.py  session_token_counter.py
agent-service/tests/: test_sticky_routing.py  test_try_claim.py
asset-manager/: Containerfile  README.md  pyproject.toml
asset-manager/config/agents/: agent-1.yaml  laptop-refresh-agent.yaml  routing-agent.yaml
asset-manager/config/lg-prompts/: lg-prompt-big.yaml  lg-prompt-small-scout.yaml  lg-prompt-small.yaml  routing.yaml
asset-manager/config/prompts/: laptop-refresh-agent.txt  laptop-refresh-llama-3-3-70b-instruct-w8a8.txt  laptop-refresh-llama-4-scout-17b-16e-w4a16.txt
asset-manager/config/toolgroups/: employee-info-mcp.yaml  snow.yaml
asset-manager/local_testing/: README.md
asset-manager/local_testing/script/: play.py
asset-manager/script/: register_assets.py
asset-manager/src/asset_manager/: __init__.py  agent_manager.py  kb_manager.py  lg_flow_state_machine.py  manager.py  responses_agent.py  tg_manager.py  token_counter.py  util.py
asset-manager/tests/: test_agent_manager.py
backend/: Containerfile  README.md  main.py  pyproject.toml
backend/agent-manager/: pyproject.toml
backend/agent-manager/tests/: test_agent_manager.py
backend/local_llamastack_server/: run_llamastack.sh
evaluations/: .gitignore  README.md  deep_eval.py  evaluate.py  export_conversations_from_api.py  flow_registry.py  generator.py  get_deepeval_metrics.py  pyproject.toml  run_conversations.py
evaluations/conversations_config/: authoritative_user_ids  authoritative_user_ids_emp_id
evaluations/conversations_config/conversations/: failed-flow-replication-test.json  return-to-router-done.json  return-to-router.json  success-flow-1.json  (+1 more)
evaluations/helpers/: __init__.py  copy_context.py  custom_llm.py  deep_eval_summary.py  extract_deepeval_metrics.py  load_conversation_context.py  openshift_chat_client.py  run_conversation_flow.py  token_counter.py
integration-dispatcher/: Containerfile  pyproject.toml  requirements.txt
integration-dispatcher/tests/: conftest.py  test_dispatch_zammad_scope.py  test_thread_lock.py  test_zammad_feedback_skip.py  test_zammad_integration_handler.py  test_zammad_webhook.py  test_zammad_webhook_route.py
mcp-servers/employee-info/: Containerfile  README.md  pyproject.toml
mcp-servers/mcp-common/: README.md  pyproject.toml
mcp-servers/snow/: Containerfile  README.md  pyproject.toml  requirements.txt
mcp-servers/zammad/: README.md  pyproject.toml  requirements.txt
mock-employee-data/: README.md  pyproject.toml  requirements.txt
mock-employee-data/tests/: test_get_employee_data.py
mock-eventing-service/: pyproject.toml  requirements.txt
mock-service-now/: README.md  pyproject.toml  requirements.txt
mock-service-now/tests/: __init__.py  test_server.py
promptguard-service/: README.md  pyproject.toml  requirements.txt
request-manager/: Containerfile  README.md  pyproject.toml  requirements.txt
request-manager/tests/: __init__.py  test_authentication.py  test_conversations.py  test_normalizer.py  test_session_serialization.py
scripts/servicenow-bootstrap/: README.md  config.json  pyproject.toml  setup.sh
shared-clients/: README.md  pyproject.toml  requirements.txt
shared-clients/tests/: __init__.py  test_import.py
shared-db/: Containerfile  pyproject.toml
shared-db/alembic/: env.py
shared-db/scripts/: migrate.py
shared-models/: alembic.ini  pyproject.toml  requirements.txt
shared-models/alembic/: env.py
shared-models/scripts/: integration_defaults_migration.py  migrate.py  smart_defaults_migration.py
shared-models/tests/: test_agent_types.py  test_cloudevent_sender.py  test_events.py  test_utils.py
tracing-config/: pyproject.toml
zammad-bootstrap/: Containerfile.zammad-bootstrap  bootstrap.py  pyproject.toml  requirements.txt
(+437 files in other folders)
