[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "self-service-agent-test"
version = "0.1.0"
description = "Test utilities for self-service agent blueprint"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "beautifulsoup4==4.13.4",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "distro==1.9.0",
    "fire==0.7.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "llama-stack-client==0.2.16",
    "markdown==3.8.2",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "numpy==2.3.1",
    "pandas==2.3.0",
    "prompt-toolkit==3.0.51",
    "pyaml==25.5.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "rich==14.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "strip-markdown==1.3",
    "termcolor==3.1.0",
    "tqdm==4.67.1",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "wcwidth==0.2.13",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "slack_sdk>=3.36.0",
    "slack-bolt>=1.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[tool.setuptools]
packages = ["test"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=5.13.0",
    "pytest>=8.4.1",
]
