[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "self-service-agent-test"
version = "0.1.0"
description = "Test utilities for self-service agent quickstart"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Only dependencies actually used in test/ directory
    "self-service-agent-shared-clients",
    "self-service-agent-shared-models",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["test"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
mypy_path = "shared-clients/src:shared-models/src:tracing-config/src"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv.sources]
self-service-agent-shared-clients = { path = "shared-clients" }
self-service-agent-shared-models = { path = "shared-models" }

[tool.uv.workspace]
members = [
    "tracing-config",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=5.13.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.2.1",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
]
