[project]
name = "self-service-agent-service"
version = "0.1.0"
description = "CloudEvent-driven Agent Service for Self-Service Agent Blueprint"
authors = [
    {name = "Self-Service Agent Team", email = "team@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "cloudevents>=1.10.0",
    "httpx>=0.25.0",
    "structlog>=23.2.0",
    # LlamaStack integration (matches Helm chart version 0.2.18)
    "llama-stack-client==0.2.18",
    "python-multipart>=0.0.6",
    "python-json-logger>=2.0.7",
    "fire>=0.5.0",
    "requests>=2.31.0",
    "self-service-agent-shared-models",
    "opentelemetry-exporter-otlp-proto-http==1.37.0",
    "opentelemetry-instrumentation-httpx==0.58b0",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "tracing-config",
    # Asset manager for LangGraph components
    "asset-manager",
    # LangGraph dependencies
    "langchain-core>=0.3.0",
    "langgraph>=0.6.7",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "aiosqlite>=0.19.0",
    "openai>=1.0.0",
    "pyyaml>=6.0.0",
    "self-service-agent-shared-clients",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "mypy>=1.6.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_service"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.uv.sources]
self-service-agent-shared-models = { path = "../shared-models" }
self-service-agent-shared-clients = { path = "../shared-clients" }
asset-manager = { path = "../asset-manager" }
tracing-config = { path = "../tracing-config" }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
