[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conversation-evaluations"
version = "0.1.0"
description = "Comprehensive conversation evaluation framework for AI agents"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
    { name = "Self-Service Agent Blueprint Team" }
]
keywords = ["ai", "conversation", "evaluation", "deepeval", "chatbot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    # Core evaluation framework
    "deepeval>=3.3.9",
    # LLM integration
    "openai>=1.99.0",
    "instructor>=1.7.0",
]

[project.optional-dependencies]
# Development dependencies for testing
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.2.1",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=5.13.0",
    "mypy>=1.17.1",
]

# Complete development environment
all = [
    "conversation-evaluations[dev]",
]

[project.scripts]
# Main evaluation commands
evaluate = "evaluate:main"
run-conversations = "run_conversations:main"
generate-conversations = "generator:main"
deep-eval = "deep_eval:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/pyproject.toml",
]

# Development tool configurations
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["helpers"]
known_third_party = ["deepeval", "instructor", "openai"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".tox",
]

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = [
    "deepeval.*",
]
ignore_missing_imports = true
