[project]
name = "mock-eventing-service"
version = "0.1.0"
description = "Mock Knative Eventing service for testing and CI"
authors = [
    {name = "Self-Service Agent Team", email = "team@example.com"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "structlog>=23.2.0",
    "httpx>=0.25.0",
    "cloudevents>=1.9.0",
    "self-service-agent-shared-models",
    "opentelemetry-exporter-otlp-proto-http==1.37.0",
    "opentelemetry-instrumentation-httpx==0.58b0",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "tracing-config",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mock_eventing_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
self-service-agent-shared-models = { path = "../shared-models" }
tracing-config = { path = "../tracing-config" }
