[project]
name = "mock-eventing-service"
version = "0.1.0"
description = "Mock Knative Eventing service for testing and CI"
authors = [
    {name = "Self-Service Agent Team", email = "team@example.com"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "structlog>=23.2.0",
    "httpx>=0.25.0",
    "cloudevents>=1.9.0",
    "orjson>=3.11.7",
    "langchain-core>=1.2.11",
    "self-service-agent-shared-models",
    "protobuf>=6.33.5",
    "opentelemetry-exporter-otlp-proto-http>=1.37.0",
    "opentelemetry-instrumentation-httpx>=0.58b0",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "tracing-config",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.2.1",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=5.13.0",
    "mypy>=1.17.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mock_eventing_service"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"

# Configure mypy to use source directories for local packages
mypy_path = "../shared-models/src:../tracing-config/src"

[[tool.mypy.overrides]]
module = [
    "opentelemetry.*",
]
follow_imports = "skip"

[tool.uv.sources]
self-service-agent-shared-models = { path = "../shared-models" }
tracing-config = { path = "../tracing-config" }
