[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptguard-service"
version = "0.1.0"
description = "PromptGuard service for detecting prompt injection and jailbreak attempts"
authors = [
    { name = "Self-Service Agent Blueprint Team", email = "team@company.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.24.0",
    "orjson>=3.11.7",
    "filelock>=3.20.3",
    "langchain-core>=1.2.11",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "self-service-agent-shared-models",
    "tracing-config",
]

[tool.hatch.build.targets.wheel]
packages = ["src/promptguard_service"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
self-service-agent-shared-models = { path = "../shared-models" }
tracing-config = { path = "../tracing-config" }
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "wheel>=0.46.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.2.1",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=5.13.0",
    "mypy>=1.17.1",
]
