[project]
name = "self-service-agent-request-manager"
version = "0.1.0"
description = "Request Management Layer for self-service agent quickstart"
authors = [
    {name = "Self-Service Agent Team", email = "team@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0,<0.117.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "cloudevents>=1.10.0",
    "httpx>=0.25.0",
    "structlog>=23.2.0",
    "pyjwt[crypto]>=2.8.0",
    "cryptography>=41.0.0",
    "opentelemetry-exporter-otlp-proto-http==1.37.0",
    "opentelemetry-instrumentation-httpx>=0.58b0",
    "opentelemetry-api>=1.37.0",
    "opentelemetry-sdk>=1.37.0",
    "self-service-agent-shared-models",
    "self-service-agent-shared-clients",
    "self-service-agent-service",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "tracing-config",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.2.1",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=5.13.0",
    "mypy>=1.17.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/request_manager"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"

# Configure mypy to use source directories for local packages
mypy_path = "../shared-models/src:../shared-clients/src:../tracing-config/src:../agent-service/src"

[[tool.mypy.overrides]]
module = [
    "opentelemetry.*",
]
follow_imports = "skip"

[tool.uv.sources]
self-service-agent-shared-models = { path = "../shared-models" }
self-service-agent-shared-clients = { path = "../shared-clients" }
self-service-agent-service = { path = "../agent-service" }
tracing-config = { path = "../tracing-config" }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.2.1",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=5.13.0",
    "mypy>=1.17.1",
]
