[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "self-service-agent-shared-clients"
version = "0.1.0"
description = "Shared client libraries for the self-service agent quickstart"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.25.0",
    "structlog>=23.2.0",
    "pydantic>=2.5.0",
    "self-service-agent-shared-models",
]

[tool.hatch.build.targets.wheel]
packages = ["src/shared_clients"]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.2.1",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=5.13.0",
    "mypy>=1.17.1"
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"

# Configure mypy to use source directories for local packages
mypy_path = "../shared-models/src"

[tool.uv.sources]
self-service-agent-shared-models = { path = "../shared-models" }

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=5.13.0",
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
